# lsl_examples

./: .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  variables.cmake
src/: istream.cpp  lib.cpp  markers.cpp  ostream.cpp  pipe.cpp
test/: CMakeLists.txt
test/source/: lsl_examples_test.cpp
